paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/fun_defs_1/sample_004/target.compile.log
warning: unnecessary parentheses around index expression
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/fun_defs_1/sample_004/target.rs:9:9
  |
9 |     ARR[((b as u8) as usize)] += b;
  |         ^                  ^
  |
  = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
  |
9 -     ARR[((b as u8) as usize)] += b;
9 +     ARR[(b as u8) as usize] += b;
  |

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/fun_defs_1/sample_004/target.rs:27:5
   |
27 | /     unsafe {
28 | |         if ARR[ub as usize] != 0 {
29 | |             std::process::exit(3);
30 | |         }
31 | |     }
   | |_____^
   |
   = note: requested on the command line with `-F unsafe-code`

warning: unused variable: `a`
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/fun_defs_1/sample_004/target.rs:3:6
  |
3 | fn f(a: u8, b: u8) -> i32 {
  |      ^ help: if this is intentional, prefix it with an underscore: `_a`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/fun_defs_1/sample_004/target.rs:4:5
  |
4 |     ARR[b as usize] = 1;
  |     ^^^ use of mutable static
  |
  = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/fun_defs_1/sample_004/target.rs:9:5
  |
9 |     ARR[((b as u8) as usize)] += b;
  |     ^^^ use of mutable static
  |
  = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error: aborting due to 3 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0133`.